Add fetch request to signup

--- a/client/src/styles/SignUpForm.css
+++ b/client/src/styles/SignUpForm.css
@@ -14,3 +14,9 @@
     font-size: medium;
     border-radius: 25%;
 }
+.errorStyle{
+    padding-top: 10rem;
+    padding-right: 5rem;
+    float: right;
+    height: 60rem;
+}
