--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -1,11 +1,15 @@
 .footerStyle{
+    margin-top: 13rem;
     height: 4.5rem;
     width: 100rem;
     background-color: navy;
+    bottom: -4.5rem;
+    align-items: center;
+
 }
 .footerWriting{
-    margin-top: 12rem;
-    padding-top: 1.1rem;
+    /* padding-top: 13rem; */
     color: white;
     text-align: center;
+    margin-bottom: 0%;
 }
