--- a/client/src/styles/NavBar.css
+++ b/client/src/styles/NavBar.css
@@ -9,11 +9,16 @@
     color: grey;
     z-index: 50;
 }
+.buttonLogoutStyle{
+    padding-top: 3.2rem;
+    padding-bottom: 2.5rem;
+    background-color: rgb(222, 218, 218);
+    border-image: linear-gradient(to bottom, rgb(209, 205, 205), grey) 1;
+    color: grey;
+}
 
 .NavBar{
     position: fixed;
     right: 7rem;
-    top: 3rem;
-    
 }
 
