--- a/client/src/styles/SignUpForm.css
+++ b/client/src/styles/SignUpForm.css
@@ -25,3 +25,13 @@
 .starStyle{
     color: red
 }
+.signUpButton{
+    width: 7rem;
+    height: 3rem;
+    font-size: larger;
+    font-weight: bold;
+    background-color: navy;
+    color: white;
+    font-style: Lucida;
+    border-radius: 30%;
+}
