--- a/client/src/styles/NavBar.css
+++ b/client/src/styles/NavBar.css
@@ -10,10 +10,11 @@
     z-index: 50;
 }
 .buttonLogoutStyle{
-    padding-top: 3.2rem;
+    padding-top: 3.05rem;
     padding-bottom: 2.5rem;
     background-color: rgb(222, 218, 218);
     border-image: linear-gradient(to bottom, rgb(209, 205, 205), grey) 1;
+    font-size: medium;
     color: grey;
 }
 
