--- a/client/src/styles/Sales.css
+++ b/client/src/styles/Sales.css
@@ -1,24 +1,19 @@
-.leftImageDiv{
-    max-width: 100%;
-    max-height: 100%;
-    padding: 25px;
-
-    float: left
-}
-.rightImageDiv{
-    max-width: 100%;
-    max-height: 100%;
-    padding: 25px;
-
-    float: right
-}
 .image{
-    width: 400px;
-    height: 300px
+    width: 300px;
+    height: 200px
 }
 .salesDisplay{
-    width: 80rem;
-    margin-top: 6.2rem;
-    margin-left: 8rem;
-    
+    width: 100%;
+    margin-top: 6.2rem;   
+}
+.imageColumn{
+    float: left;
+    width: 31%;
+    margin-left: 2rem;
+    margin-bottom: 1rem;
+}
+.salesDisplay:after{
+    content: "";
+    display: table;
+    clear: both;
 }
