--- a/client/src/styles/Sales.css
+++ b/client/src/styles/Sales.css
@@ -4,7 +4,8 @@
 }
 .salesDisplay{
     width: 100%;
-    margin-top: 6.2rem;   
+    margin-top: 6.2rem; 
+    text-align: center;  
 }
 .imageColumn{
     float: left;
