Add form for adding stories

--- a/client/src/styles/House.css
+++ b/client/src/styles/House.css
@@ -4,6 +4,7 @@
 }
 .clickImage{
     width: 5rem;
+    height: 3.5rem;
     margin-top: 20rem;
     display: inline-block;
     margin-right: .2rem;
